
Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Improve exception handling wizard
* Remove "Parties associated to Sales" menu entry
* Permit only sale line of type line as stock move origin

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Permit to remove ignored invoices and stock moves

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Add warning when receiving too much goods from sale return
* Do not invoice non sale line
* Add a button to create shipments manually
* Add a button to create invoices manually

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Fill taxes from default account for line without product
* Add partially shipped to shipment state
* Add pending, awaiting payment and partially paid to invoice state
* Remove support for Python 3.7
* Add support for Python 3.11
* Add related stock moves and invoice lines on sale line
* Add relate to sale lines from party and product
* Simplify relate to sales
* Prevent creation of lines for non draft sales
* Allow searching reporting records by name

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Add sale reporting per region
* Support warehouse pickup
* Use MultiValue for product lead time
* Remove CompanyValueMixin for default lead time

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Add customer currency on party
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Define default invoice and shipment methods by party
* Split process method
* Add general reporting
* Add reporting per customer category

Version 6.0.0 - 2021-05-03
--------------------------