@@ -1,3 +1,4 @@
+* Add relate to open products from sale
 
 Version 7.4.0 - 2024-11-04
 --------------------------
